Issue #921. Give the textarea some left padding so its placeholder isn't hidden by the caret.

--- a/webcompat/static/css/development/components/comment.css
+++ b/webcompat/static/css/development/components/comment.css
@@ -84,6 +84,11 @@
     background : #fff;
   }
 
+  /* Comment Textarea */
+  .wc-Comment-text {
+    padding-left: 1em;
+  }
+
   /* Textarea Placeholder style */
   .wc-Comment-wrapper::placeholder {
     color: var(--Comment-color);
